==> ElomedInd/STM32F373-Temperatura/Src/Adafruit_BME280.cpp <==
#include <stm32f3xx_hal.h>
#include <stm32f3xx_hal_i2c.h>
#include <stm32f3xx_hal_i2c_ex.h>
#include <wwdg.h>
#include "i2c.h"
#include "math.h"
#include <string.h>
#include "Adafruit_BME280.h"

void Adafruit_BME280::write8(byte reg, byte value) {
  uint8_t buf[2] = {reg,value};
  HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,buf,2,-1);
  /*if (_cs == -1) {
    _wire->beginTransmission((uint8_t)_i2caddr);
    _wire->write((uint8_t)reg);
    _wire->write((uint8_t)value);
    _wire->endTransmission();
  } else {
    if (_sck == -1)
      _spi->beginTransaction(SPISettings(500000, MSBFIRST, SPI_MODE0));
    digitalWrite(_cs, LOW);
    spixfer(reg & ~0x80); // write, bit 7 low
    spixfer(value);
    digitalWrite(_cs, HIGH);
    if (_sck == -1)
      _spi->endTransaction(); // release the SPI bus
  }*/
}

uint8_t Adafruit_BME280::read8(byte reg) {
  uint8_t value;
  HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,&reg,1,-1);
  HAL_I2C_Master_Receive(&hi2c1,_i2caddr,&value,1,-1);
  /*
  if (_cs == -1) {
    _wire->beginTransmission((uint8_t)_i2caddr);
    _wire->write((uint8_t)reg);
    _wire->endTransmission();
    _wire->requestFrom((uint8_t)_i2caddr, (byte)1);
    value = _wire->read();
  } else {
    if (_sck == -1)
      _spi->beginTransaction(SPISettings(500000, MSBFIRST, SPI_MODE0));
    digitalWrite(_cs, LOW);
    spixfer(reg | 0x80); // read, bit 7 high
    value = spixfer(0);
    digitalWrite(_cs, HIGH);
    if (_sck == -1)
      _spi->endTransaction(); // release the SPI bus
  }
  */
  return value;
}

uint16_t Adafruit_BME280::read16(byte reg) {
  uint16_t value;
  uint8_t buf[2];
  HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,&reg,1,-1);
  HAL_I2C_Master_Receive(&hi2c1,_i2caddr,(uint8_t*)buf,2,-1);
  value = (buf[0] << 8) | buf[1];
/*
  if (_cs == -1) {
    _wire->beginTransmission((uint8_t)_i2caddr);
    _wire->write((uint8_t)reg);
    _wire->endTransmission();
    _wire->requestFrom((uint8_t)_i2caddr, (byte)2);
    value = (_wire->read() << 8) | _wire->read();
  } else {
    if (_sck == -1)
      _spi->beginTransaction(SPISettings(500000, MSBFIRST, SPI_MODE0));
    digitalWrite(_cs, LOW);
    spixfer(reg | 0x80); // read, bit 7 high
    value = (spixfer(0) << 8) | spixfer(0);
    digitalWrite(_cs, HIGH);
    if (_sck == -1)
      _spi->endTransaction(); // release the SPI bus
  }
*/
  return value;
}

uint32_t Adafruit_BME280::read24(byte reg) {
  uint32_t value;
  uint8_t buf[3];
  HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,&reg,1,-1);
  HAL_I2C_Master_Receive(&hi2c1,_i2caddr,(uint8_t*)buf,3,-1);
  value = buf[0];
  value <<= 8;
  value |= buf[1];
  value <<= 8;
  value |= buf[2];
  /*
  if (_cs == -1) {
    _wire->beginTransmission((uint8_t)_i2caddr);
    _wire->write((uint8_t)reg);
    _wire->endTransmission();
    _wire->requestFrom((uint8_t)_i2caddr, (byte)3);

    value = _wire->read();
    value <<= 8;
    value |= _wire->read();
    value <<= 8;
    value |= _wire->read();
  } else {
    if (_sck == -1)
      _spi->beginTransaction(SPISettings(500000, MSBFIRST, SPI_MODE0));
    digitalWrite(_cs, LOW);
    spixfer(reg | 0x80); // read, bit 7 high

    value = spixfer(0);
    value <<= 8;
    value |= spixfer(0);
    value <<= 8;
    value |= spixfer(0);

    digitalWrite(_cs, HIGH);
    if (_sck == -1)
      _spi->endTransaction(); // release the SPI bus
  }
  */

  return value;
}
